force-app/main/default/objects/Quote/fields/Deliver_it_by__c.field-meta.xml
<CustomField>
    <fullName>Deliver_it_by__c</fullName>
    <label>Deliver it by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>FTL</fullName>
            </value>
            <value>
                <fullName>Parcel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>