force-app/main/default/objects/Quote/fields/Grand_Total_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_with_Tax__c</fullName>
    <description>Total value with taxes (IPI only). This field was created so the Brazil Sales Team can create quotes with tax to send to customers.</description>
    <label>Grand Total with Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>