force-app/main/default/objects/Quote/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>