force-app/main/default/objects/Quote/fields/Offer_Validity__c.field-meta.xml
<CustomField>
    <fullName>Offer_Validity__c</fullName>
    <label>Offer Validity</label>
    <type>Date</type>
</CustomField>