force-app/main/default/objects/Quote/fields/Total_Deal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Quantity__c</fullName>
    <label>Total Deal Quantity</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>