force-app/main/default/objects/Quote/fields/Total_GP_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Total_GP_Dollars__c</fullName>
    <formula>(  TotalPrice -  Total_Standard_Cost__c )  *  Total_Deal_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GP$</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>