force-app/main/default/objects/Quote/fields/Total_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_GP_Percent__c</fullName>
    <formula>((  TotalPrice -  Total_Standard_Cost__c ) /   TotalPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>