force-app/main/default/objects/Quote/fields/Total_Price_Summary__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Summary__c</fullName>
    <label>Total Price Summary</label>
    <summarizedField>QuoteLineItem.Total_Price__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>