force-app/main/default/objects/Quote/fields/Total_Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Standard_Cost__c</fullName>
    <label>Total Standard Cost</label>
    <summarizedField>QuoteLineItem.Standard_Cost__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>