force-app/main/default/objects/Quote/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EACH</fullName>
                <default>true</default>
                <label>EACH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>