force-app/main/default/objects/Quote/recordTypes/BRAZIL.recordType-meta.xml
<RecordType>
    <fullName>BRAZIL</fullName>
    <active>true</active>
    <label>BRAZIL</label>
</RecordType>