force-app/main/default/objects/Quote/recordTypes/Quote_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Quote_EMEA</fullName>
    <active>true</active>
    <label>EMEA</label>
</RecordType>