force-app/main/default/objects/Quote/recordTypes/Quote_NACA.recordType-meta.xml
<RecordType>
    <fullName>Quote_NACA</fullName>
    <active>true</active>
    <description>North America</description>
    <label>NACA</label>
</RecordType>